Remove intelliJ files

--- a/part_2_load_tables/config.yaml
+++ b/part_2_load_tables/config.yaml
@@ -1,1 +1,1 @@
-database_uri: "postgresql://user:password #Set the database URI here
+database_uri: "postgresql://user:password" #Set the database URI here
